--- a/index.html
+++ b/index.html
@@ -34,3 +34,8 @@
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
+  </body>
+</html>
